<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aandroid="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#83000000"
    android:clickable="true"
    android:focusable="true"
    android:gravity="left">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="110dp"
        android:background="@color/white_primary"
        android:elevation="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/navbar_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white_primary"
            android:orientation="vertical">



            <TextView
                android:id="@+id/textView_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/hint_fullname"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="5dp"
                android:fontFamily="@font/quicksand_semibold"
                android:paddingStart="10dp"
                android:text="@string/hint_email"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/ic_baseline_location_on_24"
                android:drawablePadding="5dp"
                android:fontFamily="@font/quicksand_semibold"
                android:paddingStart="10dp"
                android:text="@string/hint_loc"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView_program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_graduate"
                android:drawablePadding="5dp"
                android:fontFamily="@font/quicksand_semibold"
                android:paddingStart="10dp"
                android:text="@string/hint_program"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#DADADA" />

        <LinearLayout
            android:id="@+id/navbar_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_primary"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nav_profile"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/no_color"
                android:onClick="OnProfile"
                android:paddingStart="30dp"
                android:text="@string/app_prof"
                android:textAlignment="viewStart"
                android:textColor="@color/primary"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nav_dashboard"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/no_color"
                android:paddingStart="30dp"
                android:text="@string/app_dash"
                android:textAlignment="viewStart"
                android:textColor="@color/primary"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nav_settings"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/no_color"
                android:onClick="OnSettings"
                android:paddingStart="30dp"
                android:text="@string/app_sett"
                android:textAlignment="viewStart"
                android:textColor="@color/primary"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nav_help"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/no_color"
                android:onClick="OnHelp"
                android:paddingStart="30dp"
                android:text="@string/app_help"
                android:textAlignment="viewStart"
                android:textColor="@color/primary"
                android:textSize="14sp" />

            <Space
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:background="#DADADA"
                android:backgroundTint="@color/no_color"
                android:paddingStart="30dp"
                android:textAlignment="viewStart" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#DADADA" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nav_logout"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/no_color"
                android:onClick="OnLogout"
                android:paddingStart="30dp"
                android:text="@string/app_logout"
                android:textAlignment="viewStart"
                android:textColor="@color/primary"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/button_goBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24" />

</RelativeLayout>