<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_info_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top|start"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView_profilePic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/profile_info_bg"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sample_profile_pic"
        app:shapeAppearanceOverlay="@style/profile_pic_shape" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/hint_fullname"
        android:textColor="@color/primary_text"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:fontFamily="@font/quicksand_semibold"
        android:paddingStart="10dp"
        android:text="@string/hint_email"
        android:textColor="@color/secondary_text"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="5dp"
        android:fontFamily="@font/quicksand_semibold"
        android:paddingStart="10dp"
        android:text="@string/hint_program"
        android:textColor="@color/secondary_text"
        android:textSize="14sp" />

</LinearLayout>
