<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_primary"
        android:orientation="vertical">

        <include layout="@layout/pacefy_actionbar" android:id="@+id/actionbar_pacefy"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/profile_info_bg"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_centerHorizontal="true"
                android:background="@color/primary" />

            <!--<ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignBottom="@id/profile_info_bg"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="-50dp"
                android:background="@drawable/profile_pic_shape"
                android:elevation="20dp"
                android:src="draw" />-->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableImageView_profilePic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/profile_info_bg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-50dp"
                android:adjustViewBounds="true"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_profile_pic"
                app:shapeAppearanceOverlay="@style/profile_pic_shape"
                app:strokeColor="@color/white"
                app:strokeWidth="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/shapeableImageView_profilePic">
                <TextView
                    android:id="@+id/textView_profile_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/hint_fullname"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_profile_fullname"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/quicksand_semibold"
                    android:gravity="center"
                    android:text="@string/hint_email"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_profile_fullname"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/quicksand_semibold"
                    android:gravity="center"
                    android:text="@string/hint_fulllocation"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_profile_fullname"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:drawableStart="@drawable/ic_graduate"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/quicksand_semibold"
                    android:gravity="center"
                    android:text="@string/hint_program"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text"
                    android:textSize="12sp" />
            </LinearLayout>


        </RelativeLayout>



    </LinearLayout>

</FrameLayout>