<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_primary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/hidden_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/hidden_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_hintfullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="Fullname: "
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/hint_fullname"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_hintemail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="Email: "
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/hint_email"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_hintprogram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="Academic Program: "
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView_program"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/hint_program"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_hintlocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="Location: "
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/hint_loc"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_hinttype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="Account Type: "
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="Type"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/actionbar_pacefy"
        layout="@layout/pacefy_actionbar" />

    <include
        android:id="@+id/navbar_layout"
        layout="@layout/navbar_layout"
        android:visibility="gone" />

    <include
        android:id="@+id/modal_message"
        layout="@layout/modal_layout"
        android:visibility="gone" />

    <include
        android:id="@+id/progressBar_profile"
        layout="@layout/progress_bar"
        android:visibility="gone"/>

</RelativeLayout>
